# ferrum

./: LICENSE  MANIFEST.in  PKGBUILD  README.md  ferrum.desktop  ferrum.nix  ferrum.spec  pyproject.toml  stdeb.cfg
config/: default.toml
deb_dist/: ferrum_0.1.0-1.debian.tar.xz  ferrum_0.1.0-1.dsc  ferrum_0.1.0-1_amd64.buildinfo  ferrum_0.1.0-1_amd64.changes  ferrum_0.1.0-1_source.buildinfo  ferrum_0.1.0-1_source.changes  python3-ferrum_0.1.0-1_all.deb
deb_dist/ferrum-0.1.0/: PKG-INFO  README.md  build_deb.sh  ferrum.nix  pyproject.toml  stdeb.cfg
deb_dist/ferrum-0.1.0/.pybuild/cpython3_3.13_ferrum/: .pydistutils.cfg
deb_dist/ferrum-0.1.0/debian/: changelog  control  files  postinst  python3-ferrum.postinst.debhelper  python3-ferrum.prerm.debhelper  python3-ferrum.substvars  rules  watch
deb_dist/ferrum-0.1.0/debian/python3-ferrum/DEBIAN/: control  md5sums  postinst  prerm
deb_dist/ferrum-0.1.0/debian/python3-ferrum/usr/lib/python3/dist-packages/ferrum/: config.py
deb_dist/ferrum-0.1.0/debian/python3-ferrum/usr/lib/python3/dist-packages/ferrum-0.1.0.egg-info/: entry_points.txt  requires.txt
deb_dist/ferrum-0.1.0/debian/python3-ferrum/usr/lib/python3/dist-packages/ferrum/operations/: manager.py
deb_dist/ferrum-0.1.0/debian/python3-ferrum/usr/lib/python3/dist-packages/ferrum/widgets/: dialogs.py  footer.py  path_bar.py
deb_dist/ferrum-0.1.0/debian/python3-ferrum/usr/share/ferrum/wheels/: aiofiles-25.1.0-py3-none-any.whl  cffi-2.0.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  jaraco.classes-3.4.0-py3-none-any.whl  jaraco_context-6.1.1-py3-none-any.whl  jaraco_functools-4.4.0-py3-none-any.whl  jeepney-0.9.0-py3-none-any.whl  keyring-25.7.0-py3-none-any.whl  keyrings.alt-5.0.2-py3-none-any.whl  linkify_it_py-2.1.0-py3-none-any.whl  markdown_it_py-4.0.0-py3-none-any.whl  mdit_py_plugins-0.5.0-py3-none-any.whl  mdurl-0.1.2-py3-none-any.whl  more_itertools-10.8.0-py3-none-any.whl  platformdirs-4.9.4-py3-none-any.whl  pycparser-3.0-py3-none-any.whl  pygments-2.19.2-py3-none-any.whl  pyspnego-0.12.1-py3-none-any.whl  rich-14.3.3-py3-none-any.whl  secretstorage-3.5.0-py3-none-any.whl  send2trash-2.1.0-py3-none-any.whl  smbprotocol-1.16.0-py3-none-any.whl  textual-8.0.2-py3-none-any.whl  typing_extensions-4.15.0-py3-none-any.whl  uc_micro_py-2.0.0-py3-none-any.whl
deb_dist/ferrum-0.1.0/debian_deps/: textual-8.0.2-py3-none-any.whl
deb_dist/ferrum-0.1.0/ferrum/: app.py  opener.py
deb_dist/ferrum-0.1.0/ferrum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deb_dist/ferrum-0.1.0/ferrum/backends/: local.py
deb_dist/ferrum-0.1.0/ferrum/operations/: manager.py  types.py
deb_dist/ferrum-0.1.0/ferrum/widgets/: file_pane.py
debian_deps/: smbprotocol-1.16.0-py3-none-any.whl
debian_scripts/: postinst
ferrum/: app.py  config.py  messages.py
ferrum/backends/: router.py  smb.py
ferrum/widgets/: dialogs.py  file_pane.py  file_table.py  footer.py  preview.py  sidebar.py
