[project]
name = "ferrum"
version = "0.1.0"
description = "A fast, stable, DE-agnostic TUI file manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "aiofiles>=23.0.0",
    "smbprotocol>=1.12.0",
    "send2trash>=2.1.0",
    "keyring>=25.7.0",
    "keyrings.alt>=5.0.2",
]

[project.scripts]
fe = "ferrum.main:run"
ferrum = "ferrum.main:run"

[tool.setuptools.packages.find]
include = ["ferrum*"]

[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"